--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="./img/logoGRtransfer.png" rel="icon" type="image/png">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "url": "https://grtransferlasterrenas.com",
+  "logo": "https://grtransferlasterrenas.com/img/logoGRtransfer.png",
+  "name": "GR Transfer Las Terrenas"
+}
+</script>
+
 <style>
 .feature-card {
   background: #FCEED6;
