--- a/about.html
+++ b/about.html
@@ -27,6 +27,16 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="./img/logoGRtransfer.png" rel="icon" type="image/png">
+            <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "url": "https://grtransferlasterrenas.com",
+  "logo": "https://grtransferlasterrenas.com/img/logoGRtransfer.png",
+  "name": "GR Transfer Las Terrenas"
+}
+</script>
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
