--- a/room.html
+++ b/room.html
@@ -30,6 +30,16 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+        <link href="./img/logoGRtransfer.png" rel="icon" type="image/png">
+            <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "url": "https://grtransferlasterrenas.com",
+  "logo": "https://grtransferlasterrenas.com/img/logoGRtransfer.png",
+  "name": "GR Transfer Las Terrenas"
+}
+</script>
 
     <style>
 .feature-card {
