error foother y creditos

--- a/contact.html
+++ b/contact.html
@@ -355,79 +355,68 @@
         <!-- Newsletter Start -->
         
 
-        <!-- Footer Start -->
-       <div style="height: 50px; background-color: #f8f9fa;"></div>
-                    <div class="elfsight-app-5841fa61-2d8d-4b73-8871-d29d6ee35e27" data-elfsight-app-lazy></div>
-                    <a href="#" class="btn btn-lg btn-lg-square border-0 back-to-top" style="background-color: #1ABC9C; color: white;">
-    <i class="fa fa-arrow-up"></i>
-</a>
-        <!-- Footer Start -->
-       <div class="container-fluid  text-light footer wow fadeIn" data-wow-delay="0.1s" style="background-color: 	#2C3E50;">
-            <div class="container pb-5">
-                <div class="row g-5">
-               <div class="col-md-6 col-lg-4">
-    <div class=" rounded p-4" style="background-color: #1ABC9C;">
-        <a href="index.html"><h1 class="text-white text-uppercase mb-3">GR TRANSFER</h1></a>
-       <p class="text-white mb-0">
-    Bienvenido a <span class="fw-bold text-dark">GR TRANSFER</span>, tu puerta de entrada a experiencias inolvidables. Descubre traslados seguros, tours personalizados y la comodidad que transforma cada viaje en una aventura.
-</p>
-
-    </div>
-</div>
-
-                    <div class="col-md-6 col-lg-3">
-                        <h6 class="section-title text-start text-primary text-uppercase mb-4">Contacto</h6>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Calle 27 de febrero No.25 las terrenas</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+809-889-5003</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>Grtransfer24@gmail.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-5 col-md-12">
-                        <div class="row gy-5 g-4">
-                            <!-- <div class="col-md-6">
-                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Company</h6>
-                                <a class="btn btn-link" href="">About Us</a>
-                                <a class="btn btn-link" href="">Contact Us</a>
-                                <a class="btn btn-link" href="">Privacy Policy</a>
-                                <a class="btn btn-link" href="">Terms & Condition</a>
-                                <a class="btn btn-link" href="">Support</a>
-                            </div> -->
-                            <div class="col-md-6">
-                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Servicios</h6>
-                                <a class="btn btn-link" href="">recogida en el aeropuerto</a>
-                                <a class="btn btn-link" href="">recogida en casa/hotel</a>
-                                <a class="btn btn-link" href="">chofer personalizados</a>
-                                <a class="btn btn-link" href="">traslado a puntos turísticos</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">GR TRANSFER</a>, All Right Reserved. 
-							
-							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        </div>
-                        <div class="col-md-6 text-center me-auto">
-                            <div class="footer-menu">
-                                <span class="fw-bold" style="font-size: 20px; ">Creada por: </span> <a class="border-bottom" style="font-size: 20px; " href="https://htmlcodex.com">Gerald Luciano</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+ <!-- Footer Start -->
+<div class="container-fluid text-light footer wow fadeIn" data-wow-delay="0.1s" style="background-color: #2C3E50;">
+  <div class="container pb-5">
+    <div class="row g-5">
+      <!-- Información principal -->
+      <div class="col-md-6 col-lg-4">
+        <div class="rounded p-4" style="background-color: #1ABC9C;">
+          <a href="index.html"><h1 class="text-white text-uppercase mb-3">GR TRANSFER</h1></a>
+          <p class="text-white mb-0">
+            Bienvenido a <span class="fw-bold text-dark">GR TRANSFER</span>, tu puerta de entrada a experiencias inolvidables.
+            Descubre traslados seguros, tours personalizados y la comodidad que transforma cada viaje en una aventura.
+          </p>
         </div>
-        <!-- Footer End -->
+      </div>
+
+      <!-- Contacto -->
+      <div class="col-md-6 col-lg-3">
+        <h6 class="section-title text-start text-primary text-uppercase mb-4">Contacto</h6>
+        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Calle 27 de febrero No.25, Las Terrenas</p>
+        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+809-889-5003</p>
+        <p class="mb-2"><i class="fa fa-envelope me-3"></i>Grtransfer24@gmail.com</p>
+        <div class="d-flex pt-2">
+          <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-facebook-f"></i></a>
+          <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-youtube"></i></a>
+          <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+
+      <!-- Servicios -->
+      <div class="col-lg-5 col-md-12">
+        <div class="row gy-5 g-4">
+          <div class="col-md-6">
+            <h6 class="section-title text-start text-primary text-uppercase mb-4">Servicios</h6>
+            <a class="btn btn-link" href="#">Recogida en el aeropuerto</a>
+            <a class="btn btn-link" href="#">Recogida en casa/hotel</a>
+            <a class="btn btn-link" href="#">Chofer personalizados</a>
+            <a class="btn btn-link" href="#">Traslado a puntos turísticos</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Créditos -->
+  <div class="container">
+    <div class="copyright">
+      <div class="row">
+        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+          &copy; <a class="border-bottom" href="#">GR TRANSFER</a>, Todos los derechos reservados.
+        </div>
+        <div class="col-md-6 text-center me-auto">
+          <div class="footer-menu">
+            <span class="fw-bold" style="font-size: 20px;">Creada por: </span>
+            <a class="border-bottom" style="font-size: 20px;" href="https://portafolio-g.netlify.app/">Gerald Luciano</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Footer End -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 
     <!-- JavaScript Libraries -->
