--- a/index.html
+++ b/index.html
@@ -529,7 +529,8 @@
         <!-- Booking Start -->
 <!-- SECCIÓN HERO O PRINCIPAL (div anterior al de las tarjetas) -->
 <div class="container-fluid px-0 position-relative">
-  <img src="img/banner.jpg" alt="" class="img-fluid w-100">
+<!-- <img src="img/banner.jpg" alt="" class="img-fluid w-100" style="height: 400px; object-fit: cover;"> -->
+
 
   <!-- TARJETAS SUPERPUESTAS -->
 <div class="container position-relative" id="featureCardsContainer" style="z-index: 10;">
@@ -1042,14 +1043,10 @@
 <!-- Inicio Modal -->
 
 
-        <div style="height: 50px; background-color: #f8f9fa;"></div>
-                    <div class="elfsight-app-5841fa61-2d8d-4b73-8871-d29d6ee35e27" data-elfsight-app-lazy></div>
-                    <a href="#" class="btn btn-lg btn-lg-square border-0 back-to-top" style="background-color: #1ABC9C; color: white;">
-    <i class="fa fa-arrow-up"></i>
-</a>
+        <!-- Footer Start -->
 
         <!-- Footer Start -->
-            <div class="container-fluid  text-light footer wow fadeIn" data-wow-delay="0.1s" style="background-color: 	#2C3E50;">
+       <div class="container-fluid  text-light footer wow fadeIn" data-wow-delay="0.1s" style="background-color: 	#2C3E50;">
             <div class="container pb-5">
                 <div class="row g-5">
                <div class="col-md-6 col-lg-4">
@@ -1107,7 +1104,7 @@
                         </div>
                         <div class="col-md-6 text-center me-auto">
                             <div class="footer-menu">
-                                <span class="fw-bold" style="font-size: 20px; ">Creada por: </span> <a class="border-bottom" style="font-size: 20px; " href="https://htmlcodex.com">Gerald Luciano</a>
+                                <span class="fw-bold" style="font-size: 20px; ">Creada por: </span> <a class="border-bottom" style="font-size: 20px; " href="https://portafolio-g.netlify.app/">Gerald Luciano</a>
                             </div>
                         </div>
                     </div>
@@ -1115,7 +1112,6 @@
             </div>
         </div>
         <!-- Footer End -->
-
 
         <!-- Back to Top -->
 
