--- a/room.html
+++ b/room.html
@@ -950,7 +950,7 @@
                         </div>
                         <div class="col-md-6 text-center me-auto">
                             <div class="footer-menu">
-                                <span class="fw-bold" style="font-size: 20px; ">Creada por: </span> <a class="border-bottom" style="font-size: 20px; " href="https://htmlcodex.com">Gerald Luciano</a>
+                                <span class="fw-bold" style="font-size: 20px; ">Creada por: </span> <a class="border-bottom" style="font-size: 20px; " href="https://portafolio-g.netlify.app/">Gerald Luciano</a>
                             </div>
                         </div>
                     </div>
