--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
 
   </body>
 </html>
