--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
       "name": "GR Transfer Las Terrenas"
     }
     </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17385402294"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17385402294');
+</script>
 <!-- <style>
 .feature-card {
   background: #FCEED6;
