--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <div class="elfsight-app-5841fa61-2d8d-4b73-8871-d29d6ee35e27" data-elfsight-app-lazy></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <!-- <script src="https://static.elfsight.com/platform/platform.js" async></script> -->
 
 
     <!-- JavaScript Libraries -->
